# MovieHive

./: README.md
backend/: config.py  game_manager.py  main.py  models.py  pyproject.toml  routers.py
backend/routes/: game.py  login_system.py
backend/tests/: test_integration.py
frontend/: index.html  package.json
frontend/src/: App.jsx  CommonStyles.module.css  Container.jsx  Container.module.css  LoginScreen.jsx  LoginScreen.module.css  MovieCard.jsx  MovieCard.module.css  OverView.jsx  ResultView.jsx  ResultView.module.css  SubmissionView.jsx  VotingView.jsx  VotingView.module.css  WaitingView.jsx
