[project]
name = "movie-hive-backend"
version = "0.1.0"
description = "Backend for the MovieHive game."
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "jwt>=1.3.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
